// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions Should match their snapshots 1`] = `Array []`;

exports[`Actions Should match their snapshots 2`] = `
Object {
  "canEdit": true,
  "canHideRedaction": true,
  "canHideWatermark": true,
  "type": "SN_DOCVEWER_DOCUMENT_PERMISSIONS_RECEIVED",
}
`;

exports[`Actions Should match their snapshots 3`] = `
Object {
  "document": Object {
    "documentName": "doc",
  },
  "type": "SN_DOCVIEWER_DOCUMENT_DATA_RECEIVED",
}
`;

exports[`Actions Should match their snapshots 4`] = `
Object {
  "error": Object {
    "message": "Error :(",
  },
  "type": "SN_DOCVIEWER_DOCUMENT_DATA_RECEIVE_ERROR",
}
`;

exports[`Actions Should match their snapshots 5`] = `
Object {
  "inject": [Function],
  "type": "SN_POLL_DOCUMENT_DATA_INJECTABLE_ACTION",
}
`;

exports[`Actions Should match their snapshots 6`] = `
Object {
  "shapeGuid": "123456",
  "shapeType": "annotations",
  "type": "SN_DOCVIEWER_DOCUMENT_REMOVE_SHAPE",
}
`;

exports[`Actions Should match their snapshots 7`] = `
Object {
  "type": "SN_DOCVIEWER_DOCUMENT_RESET_DOCUMENT",
}
`;

exports[`Actions Should match their snapshots 8`] = `
Object {
  "degree": -90,
  "pages": Array [
    Object {
      "index": 1,
      "size": Object {
        "height": 12,
        "width": 12,
      },
    },
  ],
  "type": "SN_DOCVEWER_DOCUMENT_ROTATE_SHAPES_FOR_PAGES",
}
`;

exports[`Actions Should match their snapshots 9`] = `
Object {
  "inject": [Function],
  "type": "SN_DOCVIEWER_SAVE_CHANGES_INJECTABLE_ACTION",
}
`;

exports[`Actions Should match their snapshots 10`] = `
Object {
  "error": Object {
    "message": "Error",
  },
  "type": "SN_DOCVEWER_DOCUMENT_SAVE_CHANGES_ERROR",
}
`;

exports[`Actions Should match their snapshots 11`] = `
Object {
  "type": "SN_DOCVEWER_DOCUMENT_SAVE_CHANGES_REQUEST",
}
`;

exports[`Actions Should match their snapshots 12`] = `
Object {
  "type": "SN_DOCVEWER_DOCUMENT_SAVE_CHANGES_SUCCESS",
}
`;

exports[`Actions Should match their snapshots 13`] = `
Object {
  "pollInterval": 1000,
  "type": "SN_DOCVIEWER_DOCUMENT_SET_POLL_INTERVAL",
}
`;

exports[`Actions Should match their snapshots 14`] = `
Object {
  "shapeData": Object {
    "guid": "123",
    "h": 1,
    "imageIndex": 1,
    "w": 1,
    "x": 1,
    "y": 1,
  },
  "shapeGuid": "123456",
  "shapeType": "redactions",
  "type": "SN_DOCVIEWER_DOCUMENT_UPDATE_SHAPE",
}
`;
